--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-.container {
-  height: 100vh;
+.btn {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
